log
Tue 23 Apr 2024 08:11:23 PM UTC: 
 tests:  0|6
total_score: 0/70
bbf69ed
Wed 24 Apr 2024 06:49:21 PM UTC: 
 hashmap.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
5a23d84
Wed 24 Apr 2024 06:53:02 PM UTC: 
 hashmap.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
8bbb385
Wed 24 Apr 2024 06:57:55 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
f27739d
Thu 25 Apr 2024 05:20:20 PM UTC: 
 hashmap.c | 25 ++++++++++++++++++++++---
 1 file changed, 22 insertions(+), 3 deletions(-)
 tests:  0|0
4a148c8
Thu 25 Apr 2024 05:37:24 PM UTC: 
 hashmap.c | 22 ----------------------
 1 file changed, 22 deletions(-)
 tests:  2|5
total_score: 20/70
3cecea7
Thu 25 Apr 2024 05:43:23 PM UTC: 
 hashmap.c | 18 +++++++++++++++---
 1 file changed, 15 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:115:1: error: control reaches end of non-void function [-Werror=return-type]
  115 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
bfc1f34
Thu 25 Apr 2024 05:45:10 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:113:14: error: ‘Pair’ has no member named ‘next’
  113 |       par=par->next;
      |              ^~
Compilation failed
d4cc64c
Thu 25 Apr 2024 05:47:44 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:114:14: error: ‘Pair’ has no member named ‘next’
  114 |       par=par->next;
      |              ^~
Compilation failed
85cfe6a
Thu 25 Apr 2024 06:00:39 PM UTC: 
 hashmap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|0
ec5aeee
Thu 25 Apr 2024 06:07:03 PM UTC: 
 hashmap.c | 29 ++++++++++++++++++++++-------
 1 file changed, 22 insertions(+), 7 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:115:18: error: ‘Pair’ has no member named ‘next’
  115 |         par = par->next; // Avanzar al siguiente par en la lista enlazada
      |                  ^~
Compilation failed
7e521f7
Thu 25 Apr 2024 06:08:15 PM UTC: 
 hashmap.c | 38 +++++++++++++-------------------------
 1 file changed, 13 insertions(+), 25 deletions(-)
 tests:  3|5
total_score: 20/70
3e6ab24
Thu 25 Apr 2024 06:09:34 PM UTC: 
 hashmap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  3|5
total_score: 20/70
6250dbe
Thu 25 Apr 2024 06:10:53 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|5
total_score: 20/70
554b9dd
Thu 25 Apr 2024 06:13:08 PM UTC: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  3|5
total_score: 20/70
ada2580
Thu 25 Apr 2024 06:15:40 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|5
total_score: 20/70
81f6546
Thu 25 Apr 2024 06:17:12 PM UTC: 
 hashmap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  7|4
total_score: 30/70
d54ef96
Thu 25 Apr 2024 06:18:21 PM UTC: 
 hashmap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:100:8: error: unused variable ‘posicion’ [-Werror=unused-variable]
  100 |   long posicion=hash(key,map->capacity);
      |        ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
03c6d75
Thu 25 Apr 2024 06:19:11 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|4
total_score: 30/70
e711ad5
